up vallet/anthony

--- a/CV_postdoc/FR/main.tex
+++ b/CV_postdoc/FR/main.tex
@@ -133,8 +133,8 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 \smallskip
 \small{
 	\begin{itemize}
-		\item Mise en place et optimisation d'un \textbf{OEO} (Oscillateur Opto\'Electronique) à modulation directe oscillant à 10 GHz et présentant un très bas bruit de phase (architectures simple et double boucles)
-		\item Mise en place d'une compression d'impulsions optiques courtes (ps) et de faibles gigues dans la fibre optique (dispersion et non-linéarité Kerr)
+		\item Réalisation et optimisation d'un \textbf{OEO} (Oscillateur Opto\'Electronique) à modulation directe oscillant à 10 GHz et présentant un très bas bruit de phase (architectures simple et double boucles)
+		\item Conception et mise en place d'une compression d'impulsions optiques courtes (ps) et de faibles gigues dans la fibre optique (dispersion et non-linéarité Kerr)
 		\item Caractérisation photonique (OSA, Autocorrélateur, RIN) et électronique hyper-fréquence (ESA, VNA, bruits de phase, amplificateurs, filtres RF) en collaboration avec le support technique (ingénieurs optique et électronique)
 		\item Mesure du facteur de Henry du laser par une méthode simple et innovante (reconstruction de champ complexe par interférométrie)
 		\item Simulation  du signal laser (amplitude et phase) et de la propagation non-linéaire dans la fibre optique
@@ -169,7 +169,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 	\smallskip
 \small{
 	\begin{itemize}
-		\item Modélisation d'un montage polarimétrique complexe (formalisme de Jones et analyse de Fourier) permettant d'encoder spectralement le pouvoir rotatoire d'un échantillon par balayage de la longueur d'onde laser.
+		\item Modélisation d'un montage polarimétrique (formalisme de Jones et analyse de Fourier) permettant d'encoder spectralement le pouvoir rotatoire d'un échantillon par balayage de la longueur d'onde laser.
 		\item Simulation numérique du système (Mathematica) : sensibilité aux erreurs d'alignement et au bruit
 	\end{itemize}
 }
@@ -179,8 +179,8 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \cvsection{Formations}
 
-\cvevent{Master 2 Parcours Photonique}{Université de Bretagne Occidentale}{2019 -- 2020}{Brest}
-\hfill \textit{Mention bien (Major)}
+\cvevent{Master 2 Parcours Photonique}{Université de Bretagne Occidentale, Université de Rennes}{2019 -- 2020}{Brest--Rennes}
+\hfill \textbf{Major/}\textit{Mention bien}
 \vspace{-1em}\small{
 	
   \begin{itemize}
@@ -194,7 +194,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \divider
 
 \cvevent{Master 1 Physique fondamentale et appliquée}{Université de Bretagne Occidentale}{2018 -- 2019}{Brest}
-\hfill\textit{Mention assez bien (Major)}
+\hfill\textbf{Major/}\textit{Mention assez bien} 
 \vspace{-1em}\small{
   \begin{itemize}
     \item Théorie du signal
@@ -206,7 +206,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \divider
 
 \cvevent{Licence de physique}{Université de Bretagne Occidentale}{2015 -- 2018}{Brest}
-\hfill \textit{Mention très bien en L3 (Major)}
+\hfill \textbf{Major/}\textit{Mention très bien en L3}
 %\small{
 %  \begin{itemize}
 %    \item Optique ondulatoire
