--- a/CV_postdoc/EN/main.tex
+++ b/CV_postdoc/EN/main.tex
@@ -86,8 +86,8 @@
 
 
 \begin{document}
-\name{{\headingfont{Brian Sinquin}}  \Huge / {\headingfont{Docteur en photonique}}}
-\tagline{\textit{Recherche d'expériences postdoctorales}}
+\name{{\headingfont{Brian Sinquin}}  \Huge / {\headingfont{Ph.D in photonics}}}
+\tagline{\textit{Looking for a postdoctoral position}}
 %\tagline{
 %	Doctorant en physique des LASERs / Ph.D Student in Photonics\\
 %  \small{INSA, Institut FOTON (Université Rennes 1) UMR 6082 \'Equipe DOP}\\
@@ -98,10 +98,10 @@
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
-\large{\twemoji[width=1em]{fr}\hspace{0.9em}Français\hspace{1.5em} 26 Ans}\hspace{1.5em}
+\large{\twemoji[width=1em]{fr}\hspace{0.9em}French\hspace{1.5em} 26 Ans}\hspace{1.5em}
 \phone{(+33)6 52 40 41 62}
-\location{Rennes -- 35000} % 3 rue Robert Rême, 
-\voiture{Permis B}
+\location{Rennes, France} % 3 rue Robert Rême, 
+%\voiture{Permis B}
 \email{brian.sinquin@gmail.com}
 %\orcid{0000-0001-8278-394X}
 \linkedin{\href{https://linkedin.com/in/brian-sinquin/}{linkedin.com/in/brian-sinquin/}}
@@ -125,10 +125,10 @@
 %% not need to align the top of the contents to any
 %% \cvsection title in the "main" bar.
 
-\cvsection[page1sidebar]{Expériences}
+\cvsection[page1sidebar]{Work Experience}
 
 
-\cvevent{Doctorat (soutenance le 14/12/2023)}{INSA,  Univ. Rennes, Institut FOTON UMR 6082 \'Equipe DOP}{2020 -- 2023}{Rennes}
+\cvevent{Ph.D (defended the 14/12/2023)}{INSA,  Univ. Rennes, Institut FOTON UMR 6082 \'Equipe DOP}{2020 -- 2023}{Rennes, France}
 \textbf{Oscillateur optoélectronique à modulation directe. Génération de signaux micro-ondes et d'impulsions optiques courtes}\smallskip
 
 Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.fr)
@@ -146,7 +146,7 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 
 \divider
 
-\cvevent{Stage de Master 2}{SensUp (by Lumibird)}{février -- juillet 2020}{Lannion}
+\cvevent{Master 2 internship}{SensUp (by Lumibird)}{février -- juillet 2020}{Lannion, France}
 
 \textbf{Optimisation et caractérisation d'une chaîne LiDAR hétérodyne}\smallskip
 
@@ -162,7 +162,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \divider
 
-\cvevent{Stage de Master 1}{OPTIMAG (UBO)}{avril -- juin 2019}{Brest}
+\cvevent{Master 1 internship}{OPTIMAG (UBO)}{avril -- juin 2019}{Brest, France}
 
 \textbf{Mesure ultra-rapide du pouvoir rotatoire par codage spectral de la
 	polarisation}\smallskip
@@ -179,23 +179,23 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 
 
-\cvsection{Formations}
+\cvsection{Education}
 
-\cvevent{Master 2 Parcours Photonique}{Université de Bretagne Occidentale, Université de Rennes}{2019 -- 2020}{Brest--Rennes}
+\cvevent{Master 2 of photonics}{Université de Bretagne Occidentale, Université de Rennes}{2019 -- 2020}{Brest--Rennes}
 \hfill \textbf{Major}--\textit{Mention bien}
 \vspace{-1em}\small{
 	
   \begin{itemize}
-    \item Optique intégrée
-    \item LASERs et Télécommunication
-    \item Propagation optique \& Milieux diffusants
-    \item Projet bibliographique : Génération de super-continuums dans les fibres micro-structurées
+    \item Integrated optics
+    \item LASERs \& Telecommunication
+    \item Optical propagation  \& Scattering media
+    \item Bibliographic project : Supercontinuum generation in micro-structured optical fibers
   \end{itemize}
 }
 
 \divider
 
-\cvevent{Master 1 Physique fondamentale et appliquée}{Université de Bretagne Occidentale}{2018 -- 2019}{Brest}
+\cvevent{Master 1 of fundamental physics and applications}{Université de Bretagne Occidentale}{2018 -- 2019}{Brest}
 \hfill\textbf{Major}--\textit{Mention assez bien} 
 \vspace{-1em}\small{
   \begin{itemize}
@@ -207,7 +207,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 }
 \divider
 
-\cvevent{Licence de physique}{Université de Bretagne Occidentale}{2015 -- 2018}{Brest}
+\cvevent{Bachelor of physics}{Université de Bretagne Occidentale}{2015 -- 2018}{Brest}
 \hfill \textbf{Major}--\textit{Mention très bien en L3}
 %\small{
 %  \begin{itemize}
@@ -243,7 +243,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \begin{fullwidth}
 
-  \cvsection{Publications dans des revues spécialisées}
+  \cvsection{Peer reviewed journal publications}
 
 
 
@@ -260,7 +260,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
   % %\renewcommand{\chapter}[2]{}% for other classes
   % \printbibliography
   % \endgroup
-  \cvsection{Congrès internationaux à comités de lecture}
+  \cvsection{Peer reviewed international conferences}
   \cvevent{CLEO\textregistered/Europe-EQEC 2021}{Conference on Lasers and Electro-Optics}{21--25 juin 2021}{Visio-conférence}
 
 \begin{itemize} \item \fullcite{cleo2021}   \end{itemize}
@@ -293,14 +293,14 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
   
   \href{https://doi.org/10.1109/CLEO/Europe-EQEC57999.2023.10231566}{Présentation orale de 15 minutes}
   
-  \cvsection{Congrès nationaux à comités de lecture}
+  \cvsection{National conferences (French)}
   
   \cvevent{Journée du Club Optique Micro-ondes 2021}{Société Française d'Optique}{4 juin 2021}{Visio-conférence}
 {\quote{Signaux Opto-RF très bas bruit de phase et instabilités dynamiques d’un OEO à modulation directe}}
 
 \smallskip
 
-{Présentation orale de 15 minutes en visio-conférence (COVID)} | \href{https://hal.science/hal-03285993}{hal-03285993}
+{15 minutes talk / visioconference (COVID)} | \href{https://hal.science/hal-03285993}{hal-03285993}
 
 \divider
 
@@ -310,7 +310,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \smallskip
 
-{Présentation de poster lors de l'événement} | \href{https://hal.science/hal-03284744}{hal-03284744}
+{A poster was presented during this conference} | \href{https://hal.science/hal-03284744}{hal-03284744}
 
 \divider
 
@@ -320,7 +320,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \smallskip
 
-{Présentation orale de 15 minutes} | \href{https://hal.science/hal-03988116}{hal-03988116}
+{15 minutes talk} | \href{https://hal.science/hal-03988116}{hal-03988116}
 
 \divider
 
@@ -330,7 +330,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 {\quote{Oscillateur optoélectronique (OEO) générant des peignes de fréquences et des trains d’impulsions optiques}}
 \medskip
 
-{Présentation de poster lors de l'évenement} | \href{https://hal.science/hal-03986413}{hal-03986413}
+{A poster was presented during this conference} | \href{https://hal.science/hal-03986413}{hal-03986413}
 
 \divider
 
@@ -339,11 +339,11 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \medskip
 
-{Présentation de poster lors de l'évenement en visio-conférence} | \href{https://hal.science/hal-04133619}{hal-04133619}
+{A poster was presented during this online conference} | \href{https://hal.science/hal-04133619}{hal-04133619}
 
 \newpage
 
-  \cvsection{Autres communications scientifiques}
+  \cvsection{Other scientific communications}
 
     \cvevent{Antennes et circuits: des micro-ondes aux ondes millimétriques et THz}{GDR Ondes 2021}{18 mars 2021}{Visio-conférence}
     
@@ -359,7 +359,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
  
 \medskip
-  \cvsection{Enseignement}
+  \cvsection{Teaching experience}
 
   \cvevent{Vacataire - Université de Rennes 1}{UFR SPM}{2020--2022}{Rennes -- France}
 
@@ -371,21 +371,21 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
   \end{itemize}
 
   \medskip
-\cvsection{Encadrement}
+\cvsection{Supervising}
     
-\cvevent{Stage de Master 1}{1 mois et demi}{2021}{Rennes -- France}
+\cvevent{Master 1 internship}{1 month and a half}{2021}{Rennes -- France}
 \vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur cavité Fabry-Perot : applications à une
 nouvelle architecture d'OEO}
 
 \divider
 
 
-\cvevent{Projet de Master 2}{3 mois}{2022}{Rennes -- France}
+\cvevent{Master 2 project}{3 month}{2022}{Rennes -- France}
 \vspace{-0.5em}\textbf{Oscillateur Optoélectronique avec source laser stabilisée par Tilt-Locking}
 
 \divider
     
-\cvevent{Stage de Master 1}{1 mois et demi}{2022}{Rennes -- France}
+\cvevent{Master 1 intership}{1 month and a half}{2022}{Rennes -- France}
 \vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur
 	cavité ULE compacte: application à
 	de nouvelles architectures d’OEO}
@@ -393,7 +393,7 @@ nouvelle architecture d'OEO}
 \divider
 
     
-\cvevent{Stage de Licence 3}{1 mois et demi}{2023}{Rennes -- France}
+\cvevent{Bachelor 3 internship}{1 month and a half}{2023}{Rennes -- France}
 \vspace{-0.5em}\textbf{Oscillateur Optoélectronique à modulation directe}
 
 
