--- a/CV_postdoc/EN/page1sidebar.tex
+++ b/CV_postdoc/EN/page1sidebar.tex
@@ -1,26 +1,26 @@
 
 
 \vspace{-0.1em}
-\cvsection{Compétences}
+\cvsection{Skills}
 
 
 
 \cvsubsection{Science}
 \begin{itemize}
-	\item {Physique des lasers}
-	\item {Optique non-linéaire}
-	\item {Photonique hyper-fréquence}
-	\item {Systèmes dynamiques}
-	\item {Techniques expérimentales}
-	\item {Théorie et traitement du signal}
+	\item {Laser's physics}
+	\item {Nonlinear optics}
+	\item {Microwave photonics}
+	\item {Dynamical systems}
+	\item {Experimental techniques}
+	\item {Signal theory and analysis}
 \end{itemize}
 
 \divider
 
-\cvsubsection{Informatique}
+\cvsubsection{Computing}
 
 \begin{itemize}
-\item Programmation
+\item Coding \& Simulation
 
 \smallskip
 \cvtag{Julia}	
@@ -30,7 +30,7 @@
 
 \medskip
 
-\item Logiciels
+\item Softwares
 
 \smallskip
 \cvtag{LabView}
@@ -38,12 +38,13 @@
 
 \divider
 
-\cvsubsection{Langues}
+\cvsubsection{Languages}
 
 \begin{itemize}
 
-\item Anglais (CLES B2)
-\item Breton (Bilingue)
+\item English (Fluent)
+\item French (Native)
+\item Breton (Bilingual)
 
 \end{itemize}
 
@@ -51,29 +52,29 @@
 %% spacing consistent... sorry. Use \smallskip, \medskip, 
 %% \bigskip, \vpsace etc to make ajustments.
 \medskip
-\cvsection{Activité scientifique}
+\cvsection{Scientific activity}
 
 \cvsubsection{Publications}
 \begin{itemize}
-	\item 2 articles publiés (premier auteur)
+	\item 2 published articles (first author)
 \end{itemize}
 
 \cvsubsection{Communications}
 \begin{itemize}
-	\item 6 oraux (3 internationaux / 3 nationaux)
+	\item 6 orals (3 internationals / 3 nationals)
 	\item 3 posters
 \end{itemize}
 
-\cvsection{Activité académique}
+\cvsection{Academic activity}
 
-\cvsubsection{Enseignement}
+\cvsubsection{Teaching}
 \begin{itemize}
-	\item 58 h (TD/TP) en licence et master
+	\item 58 h (Bachelors \& Master)
 \end{itemize}
 
-\cvsubsection{Encadrement}
+\cvsubsection{Supervising}
 \begin{itemize}
-	\item 4 stages et projets (L3, M1, M2)
+	\item 4 internships and projects (Bachelors \& Master)
 \end{itemize}
 
 
