--- a/CV_postdoc/EN/main.tex
+++ b/CV_postdoc/EN/main.tex
@@ -146,7 +146,7 @@ Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.f
 
 \divider
 
-\cvevent{Master 2 internship}{SensUp (by Lumibird)}{février -- juillet 2020}{Lannion, France}
+\cvevent{2nd year Master internship}{SensUp (by Lumibird)}{février -- juillet 2020}{Lannion, France}
 
 \textbf{Optimisation et caractérisation d'une chaîne LiDAR hétérodyne}\smallskip
 
@@ -162,7 +162,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \divider
 
-\cvevent{Master 1 internship}{OPTIMAG (UBO)}{avril -- juin 2019}{Brest, France}
+\cvevent{1st year Master internship}{OPTIMAG (UBO)}{avril -- juin 2019}{Brest, France}
 
 \textbf{Mesure ultra-rapide du pouvoir rotatoire par codage spectral de la
 	polarisation}\smallskip
@@ -181,8 +181,8 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \cvsection{Education}
 
-\cvevent{Master 2 of photonics}{Université de Bretagne Occidentale, Université de Rennes}{2019 -- 2020}{Brest--Rennes}
-\hfill \textbf{Major}--\textit{Mention bien}
+\cvevent{Master of Science in Photonics}{Université de Bretagne Occidentale, Université de Rennes}{2019 -- 2020}{Brest--Rennes}
+\hfill \textit{With high honors}--\textbf{head of the class}
 \vspace{-1em}\small{
 	
   \begin{itemize}
@@ -195,20 +195,20 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \divider
 
-\cvevent{Master 1 of fundamental physics and applications}{Université de Bretagne Occidentale}{2018 -- 2019}{Brest}
-\hfill\textbf{Major}--\textit{Mention assez bien} 
+\cvevent{1st year MSc in fundamental physics and applications}{Université de Bretagne Occidentale}{2018 -- 2019}{Brest}
+\hfill\textit{With honours}--\textbf{head of the class}
 \vspace{-1em}\small{
   \begin{itemize}
-    \item Théorie du signal
-    \item Optique non linéaire, anisotrope
-    \item Physique statistique
-    \item Matière condensée
+    \item Signal theory
+    \item Nonlinear \& anisotropic optics
+    \item Statistical physics
+    \item Condensed matter
   \end{itemize}
 }
 \divider
 
 \cvevent{Bachelor of physics}{Université de Bretagne Occidentale}{2015 -- 2018}{Brest}
-\hfill \textbf{Major}--\textit{Mention très bien en L3}
+\hfill \textit{With highest honors}--\textbf{head of the class}
 %\small{
 %  \begin{itemize}
 %    \item Optique ondulatoire
@@ -267,7 +267,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
   
 \smallskip
   
-  \href{https://ieeexplore.ieee.org/document/9542636}{Présentation orale de 15 minutes en visio-conférence (COVID)}
+  \href{https://ieeexplore.ieee.org/document/9542636}{15 minutes talk / visioconference (COVID)}
   
   \divider
   
@@ -281,7 +281,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \smallskip
   
   
-  \href{https://doi.org/10.1109/CLEO/Europe-EQEC57999.2023.10231990}{Présentation orale de 15 minutes}
+  \href{https://doi.org/10.1109/CLEO/Europe-EQEC57999.2023.10231990}{15 minutes talk}
   
   \divider
   
@@ -291,7 +291,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \smallskip
   
-  \href{https://doi.org/10.1109/CLEO/Europe-EQEC57999.2023.10231566}{Présentation orale de 15 minutes}
+  \href{https://doi.org/10.1109/CLEO/Europe-EQEC57999.2023.10231566}{15 minutes talk}
   
   \cvsection{National conferences (French)}
   
@@ -351,7 +351,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \smallskip
 
-{Présentation orale de 15 minutes en visio-conférence (COVID)} | {\color{red}\faYoutubePlay}  \href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{https://www.youtube.com/watch?v=NiCSm7F7ba8}
+{5 minutes talk / visioconference (COVID)} | {\color{red}\faYoutubePlay}  \href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{https://www.youtube.com/watch?v=NiCSm7F7ba8}
 
 
 
@@ -361,31 +361,31 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \medskip
   \cvsection{Teaching experience}
 
-  \cvevent{Vacataire - Université de Rennes 1}{UFR SPM}{2020--2022}{Rennes -- France}
+  \cvevent{Université de Rennes 1}{UFR SPM}{2020--2022}{Rennes -- France}
 
   \begin{itemize}
-    \item TP Optique géométrique \textbf{(Licence 1 PCGS)} -- 16h
-    \item TD \'Eléctromagnétisme \textbf{(Licence 2 PCGS)} -- 18h
-    \item TD Systèmes et Signaux pour la Physique \textbf{(Licence 3 -- Physique)} -- 20h
-    \item TP LASER \textbf{(Master 1 Physique fondamentale et applications)} -- 4h
+    \item \textbf{Practical Work} - Geometrical Optics \textbf{(1st year Physics Bachelor)} -- 16h
+    \item \textbf{Tutorial class} - Electromagnétism \textbf{(2nd year Physics Bachelor)} -- 18h
+    \item \textbf{Tutorial class} - Signals and systems theory for the physician \textbf{(3rd year Physics Bachelor)} -- 20h
+    \item \textbf{Practical Work} - LASER \textbf{(1st year Physics Master)} -- 4h
   \end{itemize}
 
   \medskip
 \cvsection{Supervising}
     
-\cvevent{Master 1 internship}{1 month and a half}{2021}{Rennes -- France}
+\cvevent{1st year Master internship}{1 month and a half}{2021}{Rennes -- France}
 \vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur cavité Fabry-Perot : applications à une
 nouvelle architecture d'OEO}
 
 \divider
 
 
-\cvevent{Master 2 project}{3 month}{2022}{Rennes -- France}
+\cvevent{2nd year Master project}{3 month}{2022}{Rennes -- France}
 \vspace{-0.5em}\textbf{Oscillateur Optoélectronique avec source laser stabilisée par Tilt-Locking}
 
 \divider
     
-\cvevent{Master 1 intership}{1 month and a half}{2022}{Rennes -- France}
+\cvevent{1st year Master intership}{1 month and a half}{2022}{Rennes -- France}
 \vspace{-0.5em}\textbf{Laser semiconducteur stabilisé sur
 	cavité ULE compacte: application à
 	de nouvelles architectures d’OEO}
@@ -393,7 +393,7 @@ nouvelle architecture d'OEO}
 \divider
 
     
-\cvevent{Bachelor 3 internship}{1 month and a half}{2023}{Rennes -- France}
+\cvevent{3rd year Bachelor internship}{1 month and a half}{2023}{Rennes -- France}
 \vspace{-0.5em}\textbf{Oscillateur Optoélectronique à modulation directe}
 
 
