--- a/CV_postdoc/EN/main.tex
+++ b/CV_postdoc/EN/main.tex
@@ -98,7 +98,7 @@
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
-\large{\twemoji[width=1em]{fr}\hspace{0.9em}French\hspace{1.5em} 26 Ans}\hspace{1.5em}
+\large{\twemoji[width=1em]{fr}\hspace{0.9em}French\hspace{1.5em}Age: 27}\hspace{1.5em}
 \phone{(+33)6 52 40 41 62}
 \location{Rennes, France} % 3 rue Robert Rême, 
 %\voiture{Permis B}
@@ -129,50 +129,52 @@
 
 
 \cvevent{Ph.D (defended the 14/12/2023)}{INSA,  Univ. Rennes, Institut FOTON UMR 6082 \'Equipe DOP}{2020 -- 2023}{Rennes, France}
-\textbf{Oscillateur optoélectronique à modulation directe. Génération de signaux micro-ondes et d'impulsions optiques courtes}\smallskip
+\textbf{Direct-modulation optoelectronic oscillator. Microwave synthesis and short optical pulses generation} | \href{https://hal.science/tel-04461814v1/}{tel-04461814v1}\smallskip
 
-Travaux dirigés par \textbf{Dr. Marco Romanelli} (marco.romanelli@univ-rennes.fr)
+Supervisor: \textbf{Pr. Marco Romanelli} (marco.romanelli@univ-rennes.fr)
 \smallskip
 \small{
 	\begin{itemize}
-		\item Réalisation et optimisation d'un \textbf{OEO} (Oscillateur Opto\'Electronique) à modulation directe oscillant à 10 GHz et présentant un très bas bruit de phase (architectures simple et double boucles)
-		\item Conception et réalisation d'une compression d'impulsions optiques courtes (ps) et de faibles gigues dans la fibre optique (dispersion et non-linéarité Kerr)
-		\item Caractérisation photonique (OSA, Autocorrélateur, RIN) et électronique hyper-fréquence (ESA, VNA, bruits de phase, amplificateurs, filtres RF) en collaboration avec le support technique (ingénieurs optique et électronique)
-		\item Mesure du facteur de Henry du laser par une méthode simple et innovante (reconstruction de champ complexe par interférométrie)
-		\item Simulation  du signal laser (amplitude et phase) et de la propagation non-linéaire dans la fibre optique
-		\item Asservissement de longueur d'onde laser (espace libre et DFB) par PDH et Tilt-locking sur des cavités ULE, et application à de nouvelles architectures d'OEO
+		\item Realisation and optimisation of a direct-modulation \textbf{OEO} (OptoElectronic Oscillator) showing a very low phase noise 10 GHz microwave siqnal (single and dual loop architectures).
+		
+		\item Design and realization of optical pulse compression in optical fibers (dispersion, Kerr non-linearity), generation of very low jitter picosecond pulses at a rate of 10 GHz. 
+		\item Photonics (OSA, Auto-correlateur, RIN) and microwave (ESA, VNA, phase-noise, amplifiers, RF filters) characterizations in collaboration with the technical support team (engineers in optics, electronics).
+		\item Novel, accurate and simple method for the measurement of the linewidth enhancement factor (complex field reconstruction by interferometry).
+		\item Numerical simulation of a laser signal (amplitude and phase) and its nonlinear propagation in an optical fiber.
+		\item Laser wavelength locking (DFB and free space) using the PDH and Tilt-locking techniques on ULE cavities, application to new OEO architectures.
 	\end{itemize}
 }
 
 \divider
 
-\cvevent{2nd year Master internship}{SensUp (by Lumibird)}{février -- juillet 2020}{Lannion, France}
+\cvevent{2nd year Master internship}{SensUp (by Lumibird)}{february -- july 2020}{Lannion, France}
 
-\textbf{Optimisation et caractérisation d'une chaîne LiDAR hétérodyne}\smallskip
+\textbf{Caraterization and optimisation of a heterodyne fiber LiDAR}\smallskip
 
-Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
+Supervisor : \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \smallskip
 \small{
 	\begin{itemize}
-		\item Caractérisation de la chaîne LiDAR (fibres, amplificateurs, laser, photodiodes)
-		\item Simulation numérique (Matlab) de la propagation optique dans l'atmosphère (faisceaux Gaussiens) et du traitement du signal
-		\item Développement logiciel, acquisition et traitement du signal (Qt/C++) pour la cartographie (1D) de la vitesse du vent en temps réel (effet Doppler, détection hétérodyne)
+		\item Caracterization of a fiber LiDAR system (fibers, amplifiers, laser, photodiodes).
+		\item Numerical simulation (Matlab) of atmospheric optical propagation (Gaussian beams) and signal analysis.
+		\item Softwave development, signal sampling and analysis (Qt/C++) for real-time wind speed (Doppler effect, heterodyne detection) cartography (1D).
 	\end{itemize}
 }
 
 \divider
 
-\cvevent{1st year Master internship}{OPTIMAG (UBO)}{avril -- juin 2019}{Brest, France}
+\cvevent{1st year Master internship}{OPTIMAG (Université de Bretagne Occidentale)}{april -- june 2019}{Brest, France}
 
-\textbf{Mesure ultra-rapide du pouvoir rotatoire par codage spectral de la
-	polarisation}\smallskip
+\textbf{Ultra-fast measurement of optical activity by swept-wavelength polarimetry}\smallskip
 	
-	Stage supervisé par \textbf{Matthieu Dubreuil} (matthieu.dubreuil@univ-brest.fr)
+	
+	
+	Supervisor : \textbf{Matthieu Dubreuil} (matthieu.dubreuil@univ-brest.fr)
 	\smallskip
 \small{
 	\begin{itemize}
-		\item Modélisation d'un montage polarimétrique (formalisme de Jones et analyse de Fourier) permettant d'encoder spectralement le pouvoir rotatoire d'un échantillon par balayage de la longueur d'onde laser.
-		\item Simulation numérique du système (Mathematica) : sensibilité aux erreurs d'alignement et au bruit
+		\item Modelization of a polarimetric setup (Jones formalism and Fourier analysis) which spectrally encodes the optical activity of a sample (chiral) using a swept-wavelength laser source.
+		\item Numerical simulation of the system (Mathematica) : sensibility to alignement errors and to noise sources.
 	\end{itemize}
 }
 
@@ -261,41 +263,41 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
   % \printbibliography
   % \endgroup
   \cvsection{Peer reviewed international conferences}
-  \cvevent{CLEO\textregistered/Europe-EQEC 2021}{Conference on Lasers and Electro-Optics}{21--25 juin 2021}{Visio-conférence}
+  \cvevent{CLEO\textregistered/Europe-EQEC 2021}{Conference on Lasers and Electro-Optics}{21--25 june 2021}{Visioconference}
 
 \begin{itemize} \item \fullcite{cleo2021}   \end{itemize}
   
 \smallskip
   
-  \href{https://ieeexplore.ieee.org/document/9542636}{15 minutes talk / visioconference (COVID)}
+  {15 minutes talk / visioconference (COVID)}
   
   \divider
   
   
   
   
-  \cvevent{CLEO\textregistered/Europe-EQEC 2023}{Conference on Lasers and Electro-Optics}{26--30 juin 2023}{Munich -- Allemagne}
+  \cvevent{CLEO\textregistered/Europe-EQEC 2023}{Conference on Lasers and Electro-Optics}{26--30 june 2023}{Munich -- Germany}
   
 \begin{itemize} \item \fullcite{cleo2023a}   \end{itemize}
 
 \smallskip
   
   
-  \href{https://doi.org/10.1109/CLEO/Europe-EQEC57999.2023.10231990}{15 minutes talk}
+  {15 minutes talk}
   
   \divider
   
-  \cvevent{CLEO\textregistered/Europe-EQEC 2023}{Conference on Lasers and Electro-Optics}{26--30 juin 2023}{Munich -- Allemagne}
+  \cvevent{CLEO\textregistered/Europe-EQEC 2023}{Conference on Lasers and Electro-Optics}{26--30 june 2023}{Munich -- Germany}
   
 \begin{itemize} \item \fullcite{cleo2023b}   \end{itemize}
 
 \smallskip
   
-  \href{https://doi.org/10.1109/CLEO/Europe-EQEC57999.2023.10231566}{15 minutes talk}
+  {15 minutes talk}
   
   \cvsection{National conferences (French)}
   
-  \cvevent{Journée du Club Optique Micro-ondes 2021}{Société Française d'Optique}{4 juin 2021}{Visio-conférence}
+  \cvevent{Journée du Club Optique Micro-ondes 2021}{Société Française d'Optique}{4 june 2021}{Visioconference}
 {\quote{Signaux Opto-RF très bas bruit de phase et instabilités dynamiques d’un OEO à modulation directe}}
 
 \smallskip
@@ -305,7 +307,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 \divider
 
 
-\cvevent{OPTIQUE Dijon 2021}{Société Française d'Optique}{5--9 juillet 2021}{Dijon -- France}
+\cvevent{OPTIQUE Dijon 2021}{Société Française d'Optique}{5--9 july 2021}{Dijon -- France}
 {\quote{Oscillateur Opto-Électronique à modulation directe de faible bruit de phase}}
 
 \smallskip
@@ -314,7 +316,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \divider
 
-\cvevent{OPTIQUE Nice 2022}{Société Française d'Optique}{4--8 juillet 2022}{Nice -- France}
+\cvevent{OPTIQUE Nice 2022}{Société Française d'Optique}{4--8 july 2022}{Nice -- France}
 
 {\quote{Génération de peignes de fréquence et d’impulsions dans un Oscillateur Opto-Électronique à modulation directe}}
 
@@ -326,7 +328,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 
 
-\cvevent{Journée du Club Optique Micro-ondes 2022}{Société Française d'Optique}{13 juin 2022}{Besançon -- France}
+\cvevent{Journée du Club Optique Micro-ondes 2022}{Société Française d'Optique}{13 june 2022}{Besançon -- France}
 {\quote{Oscillateur optoélectronique (OEO) générant des peignes de fréquences et des trains d’impulsions optiques}}
 \medskip
 
@@ -334,7 +336,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
 \divider
 
-\cvevent{Journée du Club Optique Micro-ondes 2023}{Société Française d'Optique}{19 juin 2023}{Visio-conférence}
+\cvevent{Journée du Club Optique Micro-ondes 2023}{Société Française d'Optique}{19 june 2023}{Visioconference}
 {\quote{Direct-Modulation OEO for Optical Pulses and Frequency combs generation}}
 
 \medskip
@@ -345,13 +347,13 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
   \cvsection{Other scientific communications}
 
-    \cvevent{Antennes et circuits: des micro-ondes aux ondes millimétriques et THz}{GDR Ondes 2021}{18 mars 2021}{Visio-conférence}
+    \cvevent{Antennes et circuits: des micro-ondes aux ondes millimétriques et THz}{GDR Ondes 2021}{18 march 2021}{Visioconference}
     
 {\quote{Low phase noise direct-modulation Optoelectronic Oscillator}}
 
 \smallskip
 
-{5 minutes talk / visioconference (COVID)} | {\color{red}\faYoutubePlay}  \href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{https://www.youtube.com/watch?v=NiCSm7F7ba8}
+{15 minutes talk / visioconference (COVID)} | {\color{red}\faYoutubePlay}  \href{https://www.youtube.com/watch?v=NiCSm7F7ba8}{https://www.youtube.com/watch?v=NiCSm7F7ba8}
 
 
 
@@ -365,7 +367,7 @@ Stage supervisé par \textbf{Gildas Gueguen} (ggueguen@sensup-tech.com)
 
   \begin{itemize}
     \item \textbf{Practical Work} - Geometrical Optics \textbf{(1st year Physics Bachelor)} -- 16h
-    \item \textbf{Tutorial class} - Electromagnétism \textbf{(2nd year Physics Bachelor)} -- 18h
+    \item \textbf{Tutorial class} - Electromagnetism \textbf{(2nd year Physics Bachelor)} -- 18h
     \item \textbf{Tutorial class} - Signals and systems theory for the physician \textbf{(3rd year Physics Bachelor)} -- 20h
     \item \textbf{Practical Work} - LASER \textbf{(1st year Physics Master)} -- 4h
   \end{itemize}
