--- a/CV_postdoc/EN/page1sidebar.tex
+++ b/CV_postdoc/EN/page1sidebar.tex
@@ -69,12 +69,12 @@
 
 \cvsubsection{Teaching}
 \begin{itemize}
-	\item 58 h (Bachelors \& Master)
+	\item 58 h (Bachelor \& Master degree)
 \end{itemize}
 
 \cvsubsection{Supervising}
 \begin{itemize}
-	\item 4 internships and projects (Bachelors \& Master)
+	\item 4 internships and projects (Bachelor \& Master degree)
 \end{itemize}
 
 
